--- a/client/src/styles/groupChatBot.scss
+++ b/client/src/styles/groupChatBot.scss
@@ -58,6 +58,7 @@
             width: 100%;
             height: 100%;
             background-color: $secondaryColor;
+            overflow: auto;
             .others-message-content{
                 padding: 10px;
                 width: max-content;
