add loading state in stranger chatbot

--- a/client/src/styles/strangerChatBot.scss
+++ b/client/src/styles/strangerChatBot.scss
@@ -18,6 +18,10 @@
             color: $tertiaryColor;
             font-size: 1.5em;
         }
+        button:disabled,
+        button[disabled]{
+        opacity: 0.5;
+        }
     }
     .chatbox{
         height: 100%;
