stranger chatbot finish

--- a/client/src/styles/strangerChatBot.scss
+++ b/client/src/styles/strangerChatBot.scss
@@ -93,5 +93,8 @@
             margin: 10px;
             color: $tertiaryColor;
         }
+        input[type=submit]{
+            display: none;
+        }
     }
 }
